# otus_project

./: CMakeLists.txt  asio_client_main.cpp  client_main.cpp  format.sh  main.cpp  transfer_message.h
.github/workflows/: release.yaml
db/: create_db.sql  create_db_entities.sh  create_tables.sql  db_manager.cpp  db_manager.h  i_db_connection.h  pg_db_connection.cpp  pg_db_connection.h
db/scripts/: create_tables.sql
include/: message.cpp  message.h  transfer_message.h
tests/: db_manager_test.cpp
